--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,36 @@
 {
     "name": "mrshanebarron/accordion",
-    "description": "Collapsible accordion sections for Laravel",
+    "description": "Collapsible accordion component for Laravel - supports Livewire and Vue",
     "keywords": ["laravel", "livewire", "vue", "accordion", "collapse", "expandable"],
     "license": "MIT",
-    "authors": [{"name": "Shane Barron", "email": "mrshanebarron@gmail.com"}],
-    "require": {"php": "^8.1", "illuminate/support": "^10.0|^11.0|^12.0", "livewire/livewire": "^3.0"},
-    "autoload": {"psr-4": {"LaravelDesign\\Accordion\\": "src/"}},
-    "extra": {"laravel": {"providers": ["LaravelDesign\\Accordion\\AccordionServiceProvider"]}},
-    "minimum-stability": "stable", "prefer-stable": true
+    "authors": [
+        {
+            "name": "Shane Barron",
+            "email": "mrshanebarron@gmail.com"
+        }
+    ],
+    "require": {
+        "php": "^8.1",
+        "illuminate/support": "^10.0|^11.0|^12.0"
+    },
+    "require-dev": {
+        "livewire/livewire": "^3.0"
+    },
+    "suggest": {
+        "livewire/livewire": "Required for Livewire components (^3.0)"
+    },
+    "autoload": {
+        "psr-4": {
+            "MrShaneBarron\\Accordion\\": "src/"
+        }
+    },
+    "extra": {
+        "laravel": {
+            "providers": [
+                "MrShaneBarron\\Accordion\\AccordionServiceProvider"
+            ]
+        }
+    },
+    "minimum-stability": "stable",
+    "prefer-stable": true
 }
